fixed alignments for mobile

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -77,7 +77,7 @@ body {
 	font-weight: 600;
 	position: fixed;
 	top: 3%;
-	left: 5%;
+	left: 8%;
 	z-index: 5;
 }
 
@@ -159,7 +159,7 @@ header {
 	align-items: center;
 	justify-content: center;
 	max-width: 80dvh;
-	max-height: auto;
+	height: auto;
 	text-align: justify;
 	font-size: 1.3rem;
 }
@@ -419,7 +419,6 @@ header {
 	.left-content-section {
 		padding-top: 5%;
 		padding-bottom: 10%;
-
 		padding-inline: 2em;
 		margin: 0%;
 		padding-left: 4vw;
@@ -455,7 +454,7 @@ header {
 	}
 
 	.right-section .right-section-text {
-		font-size: 2rem;
+		font-size: 2.5rem;
 	}
 
 
@@ -490,7 +489,7 @@ header {
 
 	.quote-text {
 		width: 70%;
-		font-size: 1em;
+		font-size: 1.5em;
 		left: 50%;
 		/* Position the divider at the center horizontally */
 		transform: translateX(-50%);
@@ -534,7 +533,7 @@ header {
 
 
 	.left-section-2 .left-section-text {
-		font-size: 2rem;
+		font-size: 2.5rem;
 	}
 
 	.right-section-2 {
@@ -1800,7 +1799,7 @@ footer>div:not(.socials) {
 		font-size: 1.5rem;
 		height: 8.5vh;
 		padding: 0vh;
-		left: 8.2vw;
+		left: 5.05vh;
 
 	}
 
@@ -1821,7 +1820,7 @@ footer>div:not(.socials) {
 	}
 
 	.logo-wrapper {
-		width: 8.5vw;
+		width: 5.05vh;
 		height: 5vh;
 	}
 
@@ -1837,7 +1836,7 @@ footer>div:not(.socials) {
 
 	.fat {
 		/* founder name */
-		font-size: 3rem;
+		font-size: 2.8rem;
 		position: relative;
 		/* Set the parent to relative to enable positioning */
 		left: 55% !important;
@@ -1878,7 +1877,7 @@ footer>div:not(.socials) {
 	}
 
 	.founder-description-box {
-		margin-left: 8.5dvw;
+		margin-left: 9dvw;
 		width: 90%;
 	}
 
